cmake_minimum_required(VERSION 3.21)
project(Signaux C)

set(CMAKE_C_STANDARD 99)

add_executable(Signaux main.c)
add_executable(Signaux1 costes_exo1.c)
add_executable(Signaux2 costes_exo2.c)
add_executable(Signaux3_1 costes_exo3_1.c)
add_executable(Signaux3_2 costes_exo3_2.c)
add_executable(Signaux4 costes_exo4.c)
